# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/resource_management/resmgr.gni")
import("//build/ohos.gni")
import("//foundation/appframework/ability/ability_runtime/ability_runtime.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("rawfile_config") {
  include_dirs = [
    "//base/global/resource_management/interfaces/native/resource/include",
    "//third_party/bounds_checking_function/include",
  ]
  if (resource_management_support_icu) {
    include_dirs += [ "//third_party/icu/icu4c/source/i18n" ]
  }
}

foreach(item, ace_platforms) {
  if (item.name == "android") {
    ohos_shared_library("ndk_raw_file_" + item.name) {
      platform = item.name
      public_configs = [ ":rawfile_config" ]
      cflags = [ "-Wno-error=inconsistent-missing-override" ]
      sources = [ "//base/global/resource_management/frameworks/resmgr/src/raw_file_manager.cpp" ]

      public_deps = [
        "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_${platform}",
        "//plugins/libs/napi:napi_${platform}",
        "//plugins/libs/resmgr:resmgr_${platform}",
      ]
      defines = [ "__ARKUI_CROSS__" ]
      subsystem_name = "plugins"
      part_name = "ndk_raw_file"
    }
  } else {
    ohos_source_set("ndk_raw_file_static_" + item.name) {
      platform = item.name
      public_configs = [ ":rawfile_config" ]
      cflags = [ "-Wno-error=inconsistent-missing-override" ]
      sources = [ "//base/global/resource_management/frameworks/resmgr/src/raw_file_manager.cpp" ]

      public_deps = [
        "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_${platform}",
        "//plugins/libs/napi:napi_${platform}",
        "//plugins/libs/resmgr:resmgr_${platform}",
      ]
      defines = [ "__ARKUI_CROSS__" ]
      subsystem_name = "plugins"
      part_name = "ndk_raw_file"
    }
  }
}
