# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

rq_root_path = "//plugins/request"

rq_module_path = "$rq_root_path/interfaces/kits/napi"

rq_upload_path = "$rq_root_path/core/upload"

rq_download_path = "$rq_root_path/core/download"

rq_task_path = "$rq_root_path/core/task"

plugin_path = "//plugins"

rq_utils_path = "$plugin_path/hilog/include"

third_party_path = "//third_party"

arkui_path = "//foundation/arkui"

utils_base_path = "//commonlibrary/c_utils/base"

plugin_interfaces_path = "//plugins/interfaces"

declare_args() {
  support_download_libcurl = true
}
